# finalProject-HanksRevenge

./: .gitignore  CMakeLists.txt  README.md  port  rebuild.bat  setup.ps1  start_project.bat
Hanks revenge/: CMakeLists.txt  Hanks revenge.cpp  Hanks revenge.h
host/: HankInitialHost.c
include/: command.h  debug.h  error.h  exports.h  generated_commands.h  generated_errors.h  network.h  process.h  protocol.h  security.h  system.h  tls.h
server/: client.py  client_api.py  client_display.py  commands.py  encrypts.py  errors.py  gen_certs.py  protocol.py  server.crt  server.key  server.py
shared/: commands.csv  errors.csv  generate_shared_defs.py
src/: command.c  debug.c  exports.c  network.c  process.c  protocol.c  security.c  system.c  tls.c
